--- a/rover.org
+++ b/rover.org
@@ -1,7 +1,9 @@
-* TODO SPSU Single well site needs created
+* DONE SPSU Single well site needs created
   DEADLINE: <2018-05-29 Tue>
 
 
-* TODO Strange onping delete bot thing (make issue)
+* DONE Strange onping delete bot thing (make issue)
   DEADLINE: <2018-05-29 Tue>
+
+
 
