--- a/backlog.org
+++ b/backlog.org
@@ -1,8 +1,61 @@
-* TODO [[https://github.com/plow-technologies/virtual-parameters-frontend/issues/16][Import Export feature for Virtual Parameters]] :Shulhi: :VirtualParameters:
-  DEADLINE: <2018-08-03 Fri>
-
-* TODO [[https://github.com/plow-technologies/single-well-modbus-flexible/issues/27][Thread Blocked Indefinitely Modbus-Flexible]] :Michael: :Modbus:
-  DEADLINE: <2018-07-30 Mon>
-
-
 * TODO [[https://github.com/plow-technologies/simple-cell/issues/19][Relative Paths in Simple-Cell/Store]]
+* TODO Text message Broadcast               | Waiting | End of September |
+* Lumberjack system Features
+** DONE Build Control Panel that can be ran locally and over onping (so api-ized)
+** TODO Build system for backing up lumberjacks
+** TODO Serialize Lumberjacks for authentication
+** TODO More transparent update system for lumberjacks
+** TODO Implement authentication over RTU-Client
+** TODO Implement restore lumberjack to turn lumberjack into another
+** TODO Store config names in non remote server so renaming can be done quickly 
+
+* Jordan wants the report sent on an email thread instead of individually [[https://mail.google.com/mail/u/0/#inbox/1653425408d3fbd4][(I already let him know you were looking in to this)]] :Michael:
+  DEADLINE: <2020-08-20 Thu>
+
+
+
+
+* DONE [[https://mail.google.com/mail/u/0/#inbox/165346c02afb4bbe][Add back in time option]] :LineGraph: 
+  DEADLINE: <2019-02-08 Fri>
+  
+
+* TODO CFX Specs
+  DEADLINE: <2021-04-29 Thu>
+** TODO [[https://mail.google.com/mail/u/0/#search/CFX/16543b86e322e6dc][CFX Viewer]]                                           :CFX:Lumberjack:
+   DEADLINE: <2021-04-29 Thu>
+CFX viewer should be able to read a file that is saved as a CFX 5 or CFX 7 file format
+** TODO [[https://mail.google.com/mail/u/0/#search/CFX/16543b86e322e6dc][CFX Writer]]                                           :CFX:Lumberjack:
+   DEADLINE: <2021-04-29 Thu>
+Create a data type that when filled can be used to generate a cfx 5 or cfx 7 file.
+
+Also create the functions to do this creating.  It should be readable by our reader.
+As well as CFX view, the default file reader.
+** DONE Zeal documentation
+   DEADLINE: <2018-12-10 Mon>
+
+
+   
+* TODO [#B] Finish implementing Mass writes system
+  DEADLINE: <2020-11-29 Sun>
+A cool idea would be to add a dhall template system to the mass updates need to look at this idea more later 
+
+
+* TODO Make spec for new mask script features 
++ let binding for functions
++ case matching 
++ foldr on time array
++ fold over all inputs
+
+f x = x x 
+
+g x = x x 
+
+
+
+* TODO Add git dhall repo in onping
+* TODO  Add single-well remote spec
+
+* TODO Separate Control Logix, Micrologix, Compact Logix
+  DEADLINE: <2020-07-30 Thu>
+
+
