--- a/citizensIII.org
+++ b/citizensIII.org
@@ -1,4 +1,4 @@
-* TODO Tank Level order for Jordan
-  DEADLINE: <2018-08-23 Thu>
-Jordan wants to know if there is any way we can change the top level to show on top for the tanks legend.... I
- told him that to my knowledge if we do that it will make his tanks black again but I would ask you if there was a different way
+* DONE [[https://mail.google.com/mail/u/0/#search/jordan/16543fb72e5d55e2][ Add Tank Sums for Jordan]]
+  DEADLINE: <2020-07-21 Tue>
+This is close with the new virtual parameters
+
